fixed inconsistant spacing on index page, cleared portfolio page for restructuring

--- a/assets/style.css
+++ b/assets/style.css
@@ -42,7 +42,6 @@ body {
 
 #portfolioImage {
     padding: 20px;
-    display: block;
     text-align: center;
     max-width: 100%;
     height: auto;
